# agentNewsTask

./: .env.template  .gitignore  README.md  agentNews.drawio  docker-compose.yaml  dockerfile  pyproject.toml  report.example.html  scrapeResults.json
service/: config.py  main.py  payload.py  run_app.sh  scrapeResults.json
service/agents/: reportGenerator.py  summarizer.py
service/api/: scrape.py  search.py
service/emailService/: smtp.py
